# rust_accel

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
rust_accel/.cargo/: config.toml
src/: lib.rs
