# Cargo.toml
[package]
name = "rust_accel"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Rust-accelerated Python extension for high-performance numerical computation"
repository = "https://github.com/0rlych1kk4/rust_accel"
homepage = "https://github.com/0rlych1kk4/rust_accel"
documentation = "https://github.com/0rlych1kk4/rust_accel#readme"

[lib]
name = "rust_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
numpy = "0.18"
ndarray = "0.15"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
